<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-black"
        android:text="Regisztráció"
        android:textAlignment="center"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/loginTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_user_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <EditText
        android:id="@+id/userEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/userNameEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="@dimen/default_margin_side"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="@dimen/default_margin_side"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/userEmailEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="@dimen/default_margin_side"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="@dimen/default_margin_side"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <EditText
        android:id="@+id/passwordAgainEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/passwordEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="@dimen/default_margin_side"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="@dimen/default_margin_side"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/passwordagain"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/passwordAgainEditText"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="@dimen/default_margin_side"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="@dimen/default_margin_side"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_phone_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/phoneEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="@dimen/default_margin_side"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="@dimen/default_margin_side"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_home_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/address"
        android:inputType="textMultiLine|textPostalAddress"
        android:maxLines="3"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addressEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="35dp"
        android:fontFamily="sans-serif-condensed"
        android:text="Neme:" />

    <Spinner
        android:id="@+id/genderspinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/gender"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="@dimen/default_margin_side"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="@dimen/default_margin_side"
        android:fontFamily="sans-serif-condensed" />

    <TextView
        android:id="@+id/accountTypeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/genderspinner"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="35dp"
        android:fontFamily="sans-serif-condensed"
        android:text="Szeretnéd, ha a megadott e-mail címén felkeresnénk az időszakos akciókkal és újdonságokkal kapcsolatban?"
        android:textAlignment="center" />

    <RadioGroup
        android:id="@+id/accountTypeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/accountTypeTextView"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="90dp"
        android:orientation="horizontal"
        android:textAlignment="center">

        <RadioButton
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/nope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nope" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/accountTypeGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:backgroundTint="@color/button_background_color"
            android:onClick="register"
            android:text="@string/registration"
            android:textColor="@color/button_text_color" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="40dp"
            android:backgroundTint="@color/button_background_color"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:textColor="@color/button_text_color" />
    </LinearLayout>
</RelativeLayout>